@@ -94,6 +94,12 @@
 					<td>###PHONE###</td>
 				</tr>
 			<!--###FIELD_WRAPPER_PHONE### -->
+			<!--###FIELD_WRAPPER_XING### -->
+				<tr>
+					<td>###LABEL_XING###</td>
+					<td>###XING###</td>
+				</tr>
+			<!--###FIELD_WRAPPER_XING### -->
 			<!--###FIELD_WRAPPER_ROOM### -->
 				<tr>
 					<td>###LABEL_ROOM###</td>
