@@ -223,6 +223,15 @@ $TCA['tx_bzdstaffdirectory_persons'] = Array (
 				'size' => '30'
 			)
 		),
+		'xing_profile_url' => array(
+			'l10n_mode' => $l10n_mode,
+			'exclude' => 1,
+			'label' => 'LLL:EXT:bzd_staff_directory/locallang_db.php:tx_bzdstaffdirectory_persons.xing_profile_url',
+			'config' => array(
+				'type' => 'input',	
+				'size' => '30'
+			)
+		),
 		'files' => array(
 			'l10n_mode' => $l10n_mode_merge,
 			'exclude' => 1,		
@@ -274,7 +283,7 @@ $TCA['tx_bzdstaffdirectory_persons'] = Array (
 		)
 	),
 	'types' => array(
-		'0' => array('showitem' => 'hidden;;1;;1-1-1, last_name, first_name, title, email, phone, function, gender, date_birthdate, date_incompany, image, usergroups, location, room, officehours, tasks, opinion;;;richtext[paste|bold|italic|formatblock|class|left|center|right|orderedlist|unorderedlist|outdent|indent|link|image]:rte_transform[mode=ts_css], files')
+		'0' => array('showitem' => 'hidden;;1;;1-1-1, last_name, first_name, title, email, phone, function, gender, date_birthdate, date_incompany, image, usergroups, location, room, officehours, xing_profile_url, tasks, opinion;;;richtext[paste|bold|italic|formatblock|class|left|center|right|orderedlist|unorderedlist|outdent|indent|link|image]:rte_transform[mode=ts_css], files')
 	),
 	'palettes' => array(
 		'1' => array('showitem' => '')
